# Classifer-from-Imbalanced-Data

./: README.md  Sample.ipynb  Untitled.ipynb  main.py  requirements.txt  setup.cfg  test.py
.github/workflows/: main.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
imbalance/: datagen.py  models.py  plot.py  result_evaluate.py
src/Fartlek/: datagen.py  models.py  pre_processing.py  testdatagen.py
src/Fartlek.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Fartlek_Shivaditya.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: testdatagen.py
