[metadata]
name = Fartlek
version = 0.0.1
author = Shivaditya Shivganesh
author_email = sshivaditya@gmail.com
description = Classifiers and Pre-processing for Imbalanced Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sshivaditya2019/Classifer-from-Imbalanced-Data
project_urls =
    Bug Tracker = https://github.com/sshivaditya2019/Classifer-from-Imbalanced-Data/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src